corrected commodity swaption

--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -56,7 +56,7 @@ The meaning of Call and Put values depend on the asset class of the option, see 
       \bfseries{Asset Class and Trade Type}  & \bfseries{Call / Put Specifications} \\  \hline
 Equity/ Commodity Option & \emph{Call}: The right to buy the underlying equity/commodity at the strike price.
 \newline \emph{Put}: The right to sell the underlying equity/commodity at the strike price. \\  \hline
- IR Swaption, CallableSwap, Commodity Swap&  \emph{Call/Put} values are ignored, and the OptionType field is optional. Payer/Receiver swaption is determined in the Leg Data nodes of the underlying swap. \\ \hline
+ IR Swaption, CallableSwap, Commodity Swaption&  \emph{Call/Put} values are ignored, and the OptionType field is optional. Payer/Receiver swaption is determined in the Leg Data nodes of the underlying swap. \\ \hline
 FX Options &  \emph{Call}: Bought and Sold currencies/amounts stay as determined in the trade data node. 
 \newline \emph{Put}: Bought and Sold currencies/amounts are switched compared to the trade data node.  \\ \hline
   \end{tabu}
