added allowable values and defaults for notional exchanges

--- a/Docs/UserGuide/tradecomponents/legdatanotionals.tex
+++ b/Docs/UserGuide/tradecomponents/legdatanotionals.tex
@@ -123,6 +123,8 @@ and an amortising exchange can be specified using an \lstinline!Exchanges! child
 \lstinline!NotionalAmortizingExchange! as subelements, see Listing
 \ref{lst:notional_exchange}.
 
+Allowable values for \lstinline!NotionalInitialExchange!,  \lstinline!NotionalFinalExchange! and \lstinline!NotionalAmortizingExchange!:   \emph{true, false}. Defaults to  \emph{false} if omitted, or if the entire \lstinline!Exchanges! block is omitted.
+
 \begin{listing}[H]
 %\hrule\medskip
 \begin{minted}[fontsize=\footnotesize]{xml}
