--- a/Docs/UserGuide/tradecomponents/scheduledata.tex
+++ b/Docs/UserGuide/tradecomponents/scheduledata.tex
@@ -1,7 +1,7 @@
 \subsubsection{Schedule Data (Rules and Dates)}\label{ss:schedule_data}
 
-The \lstinline!ScheduleData! trade component node is used within the \lstinline!LegData! trade component. The Schedule can both be
-rules based (at least one sub-node Rules exists) and dates based (at least one \lstinline!Dates! sub-node exists,
+The \lstinline!ScheduleData! trade component node is used within the \lstinline!LegData! trade component. The Schedule can either be
+rules based (at least one sub-node Rules exists) or dates based (at least one \lstinline!Dates! sub-node exists,
 where the schedule is determined directly by \lstinline!Date! child elements). In rules based schedules, the schedule dates are generated from a
 set of rules based on the entries of the sub-node Rules, having the elements StartDate, EndDate, Tenor, Calendar, Convention, TermConvention, and Rule.
 Example structures of \lstinline!ScheduleData! nodes based on rules
@@ -99,9 +99,9 @@ Allowable values: See \lstinline!Roll Convention! in Table \ref{tab:allow_stand_
 
 Allowable values and descriptions: See Table \ref{tab:rule} Rule. Defaults to \emph{Forward} if left blank or omitted.
 
-\item EndOfMonth [Optional]: Specifies whether the date generation rule is different for end of month. 
+\item EndOfMonth [Optional]: Specifies whether the date generation rule is different for end of month, so that the last date of each month is generated, regardless of number of days in the month.
 
-Allowable values: \emph{True, False}. Defaults to \emph{False} if left blank or omitted. Must be set to \emph{False} or omitted if the date generation Rule is set to \emph{CDS} or \emph{CDS2015}.
+Allowable values: \emph{true, false}. Defaults to \emph{false} if left blank or omitted. Must be set to \emph{false} or omitted if the date generation Rule is set to \emph{CDS} or \emph{CDS2015}.
 
 \item FirstDate [Optional]: Date for initial stub period. For date generation rules \emph{CDS} and \emph{CDS2015}, if given, this
   overwrites the first date of the schedule that is otherwise built from IMM dates.
