[Touch:909]update doc

--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -131,8 +131,9 @@ EUR-EURIBOR, USD-LIBOR etc.
 \subsubsection{Future Conventions}
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 A node with name \emph{Future} is used to store conventions for IMM Future quotes. The structure of this node is shown
-in Listing \ref{lst:future_conventions}. The only piece of information needed is the underlying money market index name
-and this is given in the \lstinline!Index! node. For example, this could be EUR-EURIBOR-3M, USD-LIBOR-3M etc.
+in Listing \ref{lst:future_conventions}. The only piece of information needed is the underlying money market or
+overnight future index name and this is given in the \lstinline!Index! node. For example, this could be EUR-EURIBOR-3M,
+USD-LIBOR-3M, USD-SOFR, GBP-SONIA etc.
 
 \begin{listing}[H]
 %\hrule\medskip
