add missing forward bond input rules

--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4782,6 +4782,7 @@ This node is used only if \lstinline!DontThrow! is \lstinline!true!. The meaning
 \input{tradedata/cpiswap}
 \input{tradedata/yyswap}
 \input{tradedata/bond}
+\input{tradedata/forwardbond}
 \input{tradedata/creditdefaultswap}
 \input{tradedata/commodityoption}
 \input{tradedata/commodityforward}
