--- a/Docs/UserGuide/tradedata/creditdefaultswap.tex
+++ b/Docs/UserGuide/tradedata/creditdefaultswap.tex
@@ -10,7 +10,7 @@ A credit default swap, trade type \lstinline!CreditDefaultSwap!, is set up using
 \item PaysAtDefaultTime [Optional]: If set to \lstinline!true!, any payments triggered by a default event are due at default time. If set to \lstinline!false!, they are due at the end of the accrual period. This defaults to \lstinline!true! if not provided.
 \item ProtectionStart [Optional]: The first date where a default event will trigger the contract. This defaults to the first date in the schedule if it is not provided.
 \item UpfrontDate [Optional]: Settlement date for the UpfrontFee if an UpfrontFee is provided. If an UpfrontFee is provided and it is non-zero, UpfrontDate is required. The UpfrontDate, if provided, must be on or after the ProtectionStart date.
-\item UpfrontFee [Optional]: The upfront payment, expressed as a rate, to be multiplied by notional amount.
+\item UpfrontFee [Optional]: The upfront payment, expressed as a rate, to be multiplied by notional amount. If an UpfrontDate is provided, an UpfrontFee must also be provided. The UpfrontFee cannot be left blank.
 \item FixedRecoveryRate [Optional]: This node holds the fixed recovery rate if the CDS is a fixed recovery CDS. For a standard CDS, this field should be omitted.
 \end{itemize}
 
