--- a/Docs/UserGuide/tradecomponents/cdsreferenceinformation.tex
+++ b/Docs/UserGuide/tradecomponents/cdsreferenceinformation.tex
@@ -25,13 +25,13 @@ The meanings and allowable values of the elements in the \lstinline!ReferenceInf
 This is typically a six digit Markit RED code specifying the underlying reference entity with the prefix \lstinline!RED:! e.g. \lstinline!RED:008CA0!.
 
 \item \lstinline!Tier!:
-The debt tier that is applicable for the specified reference entity in the credit derivative. Table \ref{tab:allowable_values_tier} provides the allowable values.
+The debt tier that is applicable for the specified reference entity in the credit derivative. Table \ref{tab:tier_data} provides the allowable values.
 
 \item \lstinline!Currency!:
 The currency that is applicable for the specified reference entity in the credit derivative. The \lstinline!Currency! section in Table \ref{tab:allow_stand_data} provides the allowable values.
 
 \item \lstinline!DocClause!:
-The documentation clause that is applicable for the specified reference entity in the credit derivative. This defines what constitutes a credit event for the contract as well as any limitations on the deliverable debt in the event of a credit event. Table \ref{tab:allowable_values_doc_clause} provides the allowable values.
+The documentation clause that is applicable for the specified reference entity in the credit derivative. This defines what constitutes a credit event for the contract as well as any limitations on the deliverable debt in the event of a credit event. Table \ref{tab:docclause_data} provides the allowable values.
 
 \end{itemize}
 
