--- a/Docs/UserGuide/tradedata/fxforward.tex
+++ b/Docs/UserGuide/tradedata/fxforward.tex
@@ -33,3 +33,6 @@ Allowable values: \emph{Cash} or \emph{Physical}.  Defaults to \emph{Physical} i
 
 
 \end{itemize}
+
+Note that FX Forwards also cover Precious Metals forwards, i.e. with
+currencies XAU, XAG, XPT, XPD.
