--- a/Docs/UserGuide/tradedata/fxoption.tex
+++ b/Docs/UserGuide/tradedata/fxoption.tex
@@ -50,3 +50,6 @@ Allowable values:  See Currency in Table \ref{tab:allow_stand_data}.
 Allowable values:  Any positive real number.
 
 \end{itemize}
+
+Note that FX Options also cover Precious Metals Options, i.e. with
+currencies XAU, XAG, XPT, XPD.
