--- a/Docs/UserGuide/tradedata/fxswap.tex
+++ b/Docs/UserGuide/tradedata/fxswap.tex
@@ -39,3 +39,6 @@ The meanings and allowable values of the various elements in the \lstinline!FXSw
 Allowable values: \emph{Cash} or \emph{Physical}.  Defaults to \emph{Physical} if left blank or omitted.
 
 \end{itemize}
+
+Note that FX Swaps also cover Precious Metals Swaps, i.e. with
+currencies XAU, XAG, XPT, XPD.
