--- a/Docs/UserGuide/tradedata/commodityforward.tex
+++ b/Docs/UserGuide/tradedata/commodityforward.tex
@@ -36,5 +36,6 @@ The meanings and allowable values of the elements in the \lstinline!CommodityFor
 	Allowable values:  Any positive real number.
 \end{itemize}
 
-\subsubsection{Precious Metal Forward}
-A Precious Metal Forward should be represented as a Commodity Forward as above.
+%\subsubsection{Precious Metal Forward}
+Note that a Precious Metal Forward should be represented as an FX
+Forward using the appropriate commodity ``currency'' (XAU, XAG, XPT, XPD).
