--- a/Docs/UserGuide/tradedata/commodityoption.tex
+++ b/Docs/UserGuide/tradedata/commodityoption.tex
@@ -39,5 +39,7 @@ The meanings and allowable values of the elements in the \lstinline!CommodityOpt
 	Allowable values:  Any positive real number.
 \end{itemize}
 
-\subsubsection{Precious Metal Option}
-A Precious Metal Option should be represented as a Commodity Option as above.
+%\subsubsection{Precious Metal Option}
+%A Precious Metal Option should be represented as a Commodity Option as above.
+Note that a Precious Metal Option should be represented as an FX
+Option using the appropriate commodity ``currency'' (XAU, XAG, XPT, XPD).
