--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -617,7 +617,7 @@ A node with name \lstinline!CommodityFuture! is used to store conventions for co
   </AnchorDay>
   <ContractFrequency>...</ContractFrequency>
   <Calendar>...</Calendar>
-  <ExpiryInPreviousMonth>...</ExpiryInPreviousMonth>
+  <ExpiryMonthLag>...</ExpiryMonthLag>
   <OneContractMonth>...</OneContractMonth>
   <OffsetDays>...</OffsetDays>
   <BusinessDayConvention>...</BusinessDayConvention>
@@ -639,7 +639,7 @@ The meanings of the various elements in this node are as follows:
 \end{itemize}
 \item \lstinline!ContractFrequency!: This node indicates the frequency of the commodity future contracts. The value here is usually \lstinline!Monthly! or \lstinline!Quarterly!.
 \item \lstinline!Calendar!: The business day calendar(s) applicable for the commodity future contract.
-\item \lstinline!ExpiryInPreviousMonth! [Optional]: The allowable values are \lstinline!true! and \lstinline!false!. If \lstinline!true!, the commodity future contract expires in the month prior to the contract month. If \lstinline!false!, the commodity future contract expiry date is in the contract month. If omitted, it defaults to \lstinline!false!.
+\item \lstinline!ExpiryMonthLag! [Optional]: The allowable values are any non-negative integer. This value indicates the number of months from the month containing the expiry date to the contract month. If 0, the commodity future contract expiry date is in the contract month. If the value of \lstinline!ExpiryMonthLag! is $n > 0$, the commodity future contract expires in the $n$-th month prior to the contract month. The value of \lstinline!ExpiryMonthLag! is generally 0, 1 or 2. For example, \lstinline!NYMEX:CL! has an \lstinline!ExpiryMonthLag! of 1 and \lstinline!ICE:B! has an \lstinline!ExpiryMonthLag! of 2. If omitted, it defaults to 0.
 \item \lstinline!OneContractMonth! [Optional]: This node takes a calendar month in the form of the first three characters of the month with the first character capitalised. The month provided should be an arbitrary valid future contract month. It is used in cases where the \lstinline!ContractFrequency! is not \lstinline!Monthly! in order to determine the valid contract months. If omitted, it defaults to January.
 \item \lstinline!OffsetDays! [Optional]: The number of business days that the expiry date is before the base date where the base date is implied by the \lstinline!AnchorDay! node above. Any non-negative integer is allowed here. If omitted, this takes a default value of zero.
 \item \lstinline!BusinessDayConvention! [Optional]: The business day roll convention used to adjust the expiry date. The allowable values are given in Table \ref{tab:allow_stand_data}. If omitted, it defaults to \lstinline!Preceding!.
@@ -669,7 +669,7 @@ An example \lstinline!CommodityFuture! node for the NYMEX WTI future contract, s
   </AnchorDay>
   <ContractFrequency>Monthly</ContractFrequency>
   <Calendar>US-NYSE</Calendar>
-  <ExpiryInPreviousMonth>true</ExpiryInPreviousMonth>
+  <ExpiryMonthLag>1</ExpiryMonthLag>
   <OffsetDays>3</OffsetDays>
   <BusinessDayConvention>Preceding</BusinessDayConvention>
   <IsAveraging>false</IsAveraging>
