added that initial price on equity legs is in undelrying ccy

--- a/Docs/UserGuide/tradecomponents/equityleg.tex
+++ b/Docs/UserGuide/tradecomponents/equityleg.tex
@@ -13,7 +13,7 @@ Allowable values:  \emph{Price} or  \emph{Total}
  
  Allowable values: See \lstinline!Name! for equity trades in Table \ref{tab:equity_credit_data}. \\
 
-\item InitialPrice [Optional]: Initial Price of the equity, if not present, the first valuation date is used to determine the initial price.
+\item InitialPrice [Optional]: Initial Price of the equity, if not present, the first valuation date is used to determine the initial price. The Initial price is assumed to be in the currency of the underlying equity.
 
 Allowable values: Any positive real number
 
