--- a/Docs/UserGuide/tradedata/capfloor.tex
+++ b/Docs/UserGuide/tradedata/capfloor.tex
@@ -39,19 +39,19 @@ The meanings and allowable values of the elements in the \lstinline!CapFloorData
   one \lstinline!LegData! node is allowed and the LegType element must be set to \emph{Floating} or \emph{CMS}.
 
 \item Caps: This node has child elements of type \lstinline!Cap!
-  capping the floating leg. The first rate value corresponds to the
+  capping the floating leg (after applying spread if any). The first rate value corresponds to the
   first coupon, the second rate value corresponds to the second
   coupon, etc. If the number of coupons exceeds the number of rate
   values, the rate will be kept flat at the value of last entered rate
   for the remaining coupons. For a fixed cap rate over all coupons,
   one single rate value is sufficient. The number of entered rate
-  values cannot exceed the number of coupons. 
+  values cannot exceed the number of coupons.  
 
   Allowable values for each \lstinline!Cap! element: Any real number. The rate is expressed in decimal form, eg 0.05 is
   a rate of 5\%
 
 \item Floors: This node has child elements of type
-  \lstinline!Floor! flooring the floating leg.  The first rate value
+  \lstinline!Floor! flooring the floating leg (after applying spread if any).  The first rate value
   corresponds to the first coupon, the second rate value corresponds
   to the second coupon, etc. If the number of coupons exceeds the
   number of rate values, the rate will be kept flat at the value of
