--- a/Docs/UserGuide/tradecomponents/legdatanotionals.tex
+++ b/Docs/UserGuide/tradecomponents/legdatanotionals.tex
@@ -57,7 +57,7 @@ Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.
 
 Allowable values: See \lstinline!Roll Convention! in Table \ref{tab:allow_stand_data}.
 
-\item PaymentLag [optional]: The payment lag given as as number business days, applies to fixed, Ibor and OIS legs.
+\item PaymentLag [optional]: The payment lag given as as number business days, applies to fixed, Ibor and OIS legs. PaymentLag is not supported for the CapFloor trade type.
 
 Allowable values: A non-negative whole number, if not given it defaults to zero.
 
