Forget to escape _ in tex. Correct other errors also.

--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -511,8 +511,7 @@ The meaning of the elements is as follows:
 \subsubsection{CMS Spread Option Conventions}
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-A node with name \emph{InflationSwap} is used to store conventions for zero or year on year inflation swap quotes. The
-structure of this node is shown in Listing \ref{lst:inflation_conventions}
+A node with name \emph{CmsSpreadOption} is used to store the conventions.
 
 \begin{listing}[H]
 %\hrule\medskip
@@ -529,7 +528,7 @@ structure of this node is shown in Listing \ref{lst:inflation_conventions}
   </CmsSpreadOption>
 \end{minted}
 \caption{Inflation swap conventions}
-\label{lst:inflation_conventions}
+\label{lst:cms_spread_option_conventions}
 \end{listing}
 
 The meaning of the elements is as follows:
