--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -101,16 +101,16 @@
     \emph{XNYS} & US New York Stock Exchange Calendar \\ \hline
     \emph{WMR} & Thomson Reuters QM/Reuters Spot \\ \hline
     \emph{WeekendsOnly} & Weekends Only Calendar \\ \hline
-    \emph{ICE_FuturesUS} & ICE Futures U.S. Currency, Stock and Credit Index, Metal, Nat Gas, Power, Oil and Environmental \\ \hline
-    \emph{ICE_FuturesUS_1} & ICE Futures U.S. Sugar, Cocoa, Coffee, Cotton and FCOJ \\ \hline
-    \emph{ICE_FuturesUS_2} & ICE Futures U.S. Canola \\ \hline
-    \emph{ICE_FuturesEU} & ICE Futures Europe \\ \hline
-    \emph{ICE_FuturesEU_1} & ICE Futures Europe for contracts where 26 Dec is a holiday \\ \hline
-    \emph{ICE_EndexEnergy} & ICE Endex European power and natural gas products \\ \hline
-    \emph{ICE_EndexEquities} & ICE Endex European equities \\ \hline
-    \emph{ICE_SwapTradeUS} & ICE Swap Trade U.S. \\ \hline
-    \emph{ICE_SwapTradeUK} & ICE Swap Trade U.K. \\ \hline
-    \emph{ICE_FuturesSingapore} & ICE futures Singapore \\ \hline
+    \emph{ICE\_FuturesUS} & ICE Futures U.S. Currency, Stock and Credit Index, Metal, Nat Gas, Power, Oil and Environmental \\ \hline
+    \emph{ICE\_FuturesUS\_1} & ICE Futures U.S. Sugar, Cocoa, Coffee, Cotton and FCOJ \\ \hline
+    \emph{ICE\_FuturesUS\_2} & ICE Futures U.S. Canola \\ \hline
+    \emph{ICE\_FuturesEU} & ICE Futures Europe \\ \hline
+    \emph{ICE\_FuturesEU\_1} & ICE Futures Europe for contracts where 26 Dec is a holiday \\ \hline
+    \emph{ICE\_EndexEnergy} & ICE Endex European power and natural gas products \\ \hline
+    \emph{ICE\_EndexEquities} & ICE Endex European equities \\ \hline
+    \emph{ICE\_SwapTradeUS} & ICE Swap Trade U.S. \\ \hline
+    \emph{ICE\_SwapTradeUK} & ICE Swap Trade U.K. \\ \hline
+    \emph{ICE\_FuturesSingapore} & ICE futures Singapore \\ \hline
     \emph{CME} & CME group exchange calendar \\ \hline
     % \emph{US+TARGET, NYB\_TGT, TGT\_NYB} & US and Target Calendar \\ \hline  
     % \emph{NYB\_LNB, LNB\_NYB} & US and UK Calendar \\ \hline    
