removed LONG, long from optiondata

--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -40,8 +40,7 @@ The meanings and allowable values of the elements in the \lstinline!OptionData! 
 \begin{itemize}
 \item LongShort: Specifies whether the option position is \emph{long}  or \emph{short}.  Note that for Swaptions and Callable Swaps, setting \lstinline!LongShort! to \emph{short} makes the \lstinline!Payer! indicator on the underlying swap to be set from the perspective of the Counterparty. 
 
-Allowable values: \emph{Long, LONG, long, L} or \emph{Short, SHORT,
-  short, S}
+Allowable values: \emph{Long, L} or \emph{Short, S}
 
 \item OptionType: Specifies whether it is a call or a put option. Optional for trade types Swaption and CallableSwap.
 
