capfloor does not support amortizations structure

--- a/Docs/UserGuide/tradecomponents/legdataamortisation.tex
+++ b/Docs/UserGuide/tradecomponents/legdataamortisation.tex
@@ -4,7 +4,8 @@
 Amortisation structures can (optionally) be added to a leg as
 indicated in the following listing \ref{lst:amortisations}, within a
 block of information enclosed by {\tt <Amortizations>} and {\tt
-  </Amortizations>} tags.
+  </Amortizations>} tags. Note that {\tt <Amortizations>}  structures are 
+  not supported for trade type CapFloor.
 
 \begin{listing}[H]
 %\hrule\medskip
