--- a/Docs/UserGuide/tradedata/equityswap.tex
+++ b/Docs/UserGuide/tradedata/equityswap.tex
@@ -1,32 +1,7 @@
 \subsubsection{Equity Swap}
 
-An Equity Swap uses its own trade type  \emph{EquitySwap}, but is set up as a swap using the {\tt SwapData} node, with one leg of type  \emph{Equity} and one more leg that can be either \emph{Fixed} or  \emph{Floating}. Listing \ref{lst:equityswap} shows an example. The
+An Equity Swap uses its own trade type  \emph{EquitySwap}, but is set up as a swap using a {\tt EquitySwapData} node with one leg of type  \emph{Equity} and one more leg that can be either \emph{Fixed} or  \emph{Floating}. Listing \ref{lst:equityswap} shows an example. The
 Equity leg contains an additional {\tt EquityLegData} block. See \ref{ss:equitylegdata} for details on the Equity leg specification.
-
-The {\tt SwapData} node can also be labelled {\tt EquitySwapData} with an otherwise unchanged xml schema.
-
-\begin{listing}[H]
-%\hrule\medskip
-\begin{minted}[fontsize=\footnotesize]{xml}
-    <SwapData>
-      <LegData>
-        <LegType>Floating</LegType>
-        <Payer>true</Payer>
-        ...
-      </LegData>
-      <LegData>
-        <LegType>Equity</LegType>
-        <Payer>false</Payer>
-        ...
-        <EquityLegData>
-        ...
-        </EquityLegData>
-      </LegData>
-    </SwapData>
-\end{minted}
-\caption{Equity Swap Data}
-\label{lst:equityswap}
-\end{listing}
 
 \begin{listing}[H]
 %\hrule\medskip
@@ -47,6 +22,6 @@ The {\tt SwapData} node can also be labelled {\tt EquitySwapData} with an otherw
       </LegData>
     </EquitySwapData>
 \end{minted}
-\caption{Equity Swap Data using the alternative EquitySwapData node label}
-\label{lst:equityswap2}
+\caption{Equity Swap Data}
+\label{lst:equityswap}
 \end{listing}
